tests/extensions/extensions.exp
Error --------------------------------------------------------------- foo.js:2:5

Cannot call `imp` with `1337` bound to `p` because number is incompatible with
string.

Error: foo.js:2
  2: imp(1337);
         ^^^^ Cannot call `imp` with `1337` bound to `p` because number [1] is incompatible with string [2].
  References:
    2: imp(1337);
           ^^^^ [1]: number
    1: module.exports = function (p: string) {}
                                     ^^^^^^ [2]: string. See: bar.jsx:1


Found 1 error
